--- a/css/style.css
+++ b/css/style.css
@@ -500,10 +500,7 @@ nav {
    justify-content: center;
    align-items: center;
 }
-.portfolio-card img:hover{
-   transform: scale(1.1);
-   cursor: pointer;
-}
+
 .service-card:hover .service-card-img {
    background: #FFA63A;
 }
@@ -550,6 +547,11 @@ nav {
    padding-bottom: 70px;
 }
 
+.portfolio-card img:hover {
+   transform: scale(1.1);
+   cursor: pointer;
+}
+
 .portfolio-card h3 {
    font-weight: 600;
    font-size: 30px;
@@ -593,6 +595,52 @@ nav {
    height: 385.99px;
 }
 
+/*  */
+.port-cont {
+   position: relative;
+   max-width: 515px;
+}
+
+.image {
+   opacity: 1;
+   display: inline-block;
+   max-width: 515px;
+   height: 385.99px;
+   transition: .5s ease;
+   backface-visibility: hidden;
+   object-fit: cover;
+}
+
+.port-middle {
+   transition: .5s ease;
+   opacity: 0;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   -ms-transform: translate(-50%, -50%)
+}
+.port-cont:hover .image{
+   opacity: 0.2;
+}
+.port-cont:hover .port-middle{
+   opacity: 1;
+}
+.port-text{
+
+   border: 3px solid #08546C;
+   font-weight: bold;
+   font-size: 20px;
+   padding: 16px 32px;
+   border-radius: 10px;
+   cursor: pointer;
+}
+.port-text a{
+   text-decoration: none;
+   color: #08546C;
+}
+
+/*  */
 /* portfolio end */
 
 /* blog start */
@@ -804,7 +852,7 @@ footer {
    }
 }
 
-#preloader{
+#preloader {
    background: #000 url(../images/loader.gif) no-repeat center center;
    background-size: 20%;
    height: 100vh;
@@ -812,6 +860,7 @@ footer {
    position: fixed;
    z-index: 10;
 }
-iframe{
+
+iframe {
    display: none;
 }
